--- a/FirmwarePackager/templates/scripts/init/sysv/S95-upgrade-recover.in
+++ b/FirmwarePackager/templates/scripts/init/sysv/S95-upgrade-recover.in
@@ -7,9 +7,10 @@
 # Default-Stop:
 # Short-Description: Run recovery after upgrade
 ### END INIT INFO
+LAST_DIR="/opt/upgrade/last"
 case "$1" in
     start)
-        /opt/upgrade/last/scripts/recover_boot.sh
+        "$LAST_DIR/scripts/recover_boot.sh"
         ;;
     *)
         echo "Usage: $0 start" >&2
