--- a/FirmwarePackager/templates/scripts/install.sh.in
+++ b/FirmwarePackager/templates/scripts/install.sh.in
@@ -31,7 +31,6 @@ log() {
     printf '%s %s\n' "$(date '+%Y-%m-%dT%H:%M:%S%z')" "$*" | tee -a "$LOG_FILE"
 }
 
-STATUS="INIT"
 STEP=""
 LAST_FILE=""
 STORE=""
@@ -56,7 +55,6 @@ done
 
 write_state() {
 cat >"$STATE_FILE" <<STATE
-STATUS=$STATUS
 STEP=$STEP
 JOURNAL=$JOURNAL
 PKG_TGZ=$PKG_TGZ
@@ -100,8 +98,7 @@ release_lock() {
 
 fail() {
     trap - EXIT
-    STATUS="FAIL"
-    STEP="rollback"
+    STEP="FAILED"
     write_state
     rollback
     release_lock
@@ -137,11 +134,20 @@ if [ "$RESUME" -eq 1 ]; then
     [ -f "$STATE_FILE" ] || exit 1
     . "$STATE_FILE"
     [ -f "$JOURNAL" ] || : > "$JOURNAL"
+    if [ "$STEP" != "DONE" ]; then
+        rollback
+        : > "$JOURNAL"
+        STEP="PREPARE"
+        LAST_FILE=""
+        write_state
+    fi
 else
     : > "$JOURNAL"
-    STATUS="RUNNING"
-    STEP="store"
+    STEP="PREPARE"
     write_state
+fi
+
+if [ "$STEP" = "PREPARE" ]; then
     if [ -n "$STORE" ]; then
         cp "$STORE" "$PKG_TGZ"
     else
@@ -151,7 +157,7 @@ else
             cp "$src" "$PKG_TGZ"
         fi
     fi
-    STEP="install"
+    STEP="BACKUP"
     write_state
 fi
 
@@ -171,7 +177,7 @@ if [ -f "$HOOK_SRC" ]; then
     fi
 fi
 
-if [ "$STEP" = "install" ]; then
+if [ "$STEP" = "BACKUP" ]; then
     SKIP=0
     if [ "$RESUME" -eq 1 ] && [ -n "$LAST_FILE" ]; then
         SKIP=1
@@ -226,11 +232,12 @@ if [ "$STEP" = "install" ]; then
         done
         sync
     } < "$BASE_DIR/manifest.tsv"
+    STEP="COMMIT"
+    write_state
 fi
 
 trap - EXIT
-STATUS="SUCCESS"
-STEP="done"
+STEP="DONE"
 LAST_FILE=""
 write_state
 cleanup_success
