--- a/FirmwarePackager/templates/scripts/install.sh.in
+++ b/FirmwarePackager/templates/scripts/install.sh.in
@@ -14,7 +14,8 @@ STATE_DIR="/opt/upgrade/state"
 PKG_DIR="/opt/upgrade/packages"
 BACKUP_DIR="/opt/upgrade/backup/${PKG_ID}"
 STATE_FILE="${STATE_DIR}/${PKG_ID}.state"
-JOURNAL="${STATE_DIR}/${PKG_ID}.journal"
+JOURNAL_DIR="/opt/upgrade/journal"
+JOURNAL_FILE="${JOURNAL_DIR}/${PKG_ID}.journal"
 PKG_TGZ="${PKG_DIR}/${PKG_ID}.tar.gz"
 LOCK_DIR="/opt/upgrade/locks"
 LOCK_FILE="${LOCK_DIR}/upgrade.lock"
@@ -56,15 +57,15 @@ done
 write_state() {
 cat >"$STATE_FILE" <<STATE
 STEP=$STEP
-JOURNAL=$JOURNAL
+JOURNAL=$JOURNAL_FILE
 PKG_TGZ=$PKG_TGZ
 LAST_FILE=$LAST_FILE
 STATE
 }
 
 rollback() {
-    [ -f "$JOURNAL" ] || return 0
-    awk '{l[NR]=$0} END{for(i=NR;i>=1;i--) print l[i]}' "$JOURNAL" | \
+    [ -f "$JOURNAL_FILE" ] || return 0
+    awk '{l[NR]=$0} END{for(i=NR;i>=1;i--) print l[i]}' "$JOURNAL_FILE" | \
     while IFS="|" read -r action dest backup; do
         case "$action" in
             REPLACED)
@@ -116,7 +117,7 @@ cleanup_success() {
             done
         } < "$BASE_DIR/manifest.tsv"
     fi
-    rm -f "$JOURNAL" "$STATE_FILE" "$PKG_TGZ"
+    rm -f "$JOURNAL_FILE" "$STATE_FILE" "$PKG_TGZ"
     rm -rf "$BACKUP_DIR"
     release_lock
 }
@@ -124,7 +125,7 @@ cleanup_success() {
 trap fail INT TERM HUP QUIT
 trap fail EXIT
 
-mkdir -p "$STATE_DIR" "$PKG_DIR" "$BACKUP_DIR" "$LOCK_DIR"
+mkdir -p "$STATE_DIR" "$JOURNAL_DIR" "$PKG_DIR" "$BACKUP_DIR" "$LOCK_DIR"
 if ! acquire_lock; then
     log "Another upgrade is in progress" >&2
     exit 1
@@ -133,16 +134,17 @@ fi
 if [ "$RESUME" -eq 1 ]; then
     [ -f "$STATE_FILE" ] || exit 1
     . "$STATE_FILE"
-    [ -f "$JOURNAL" ] || : > "$JOURNAL"
+    JOURNAL_FILE="$JOURNAL"
+    [ -f "$JOURNAL_FILE" ] || : > "$JOURNAL_FILE"
     if [ "$STEP" != "DONE" ]; then
         rollback
-        : > "$JOURNAL"
+        : > "$JOURNAL_FILE"
         STEP="PREPARE"
         LAST_FILE=""
         write_state
     fi
 else
-    : > "$JOURNAL"
+    : > "$JOURNAL_FILE"
     STEP="PREPARE"
     write_state
 fi
@@ -212,7 +214,7 @@ if [ "$STEP" = "BACKUP" ]; then
                 sync
                 mv "$dest" "$dest.old"
                 sync
-                echo "BACKUP|$dest|$backup" >> "$JOURNAL"
+                echo "BACKUP|$dest|$backup" >> "$JOURNAL_FILE"
             fi
 
             cp "$BASE_DIR/payload/$rel" "$dest.new"
@@ -227,7 +229,7 @@ if [ "$STEP" = "BACKUP" ]; then
             sync
             calc_final=$(md5sum "$dest" | awk '{print $1}')
             [ "$calc_final" = "$md5" ] || fail
-            echo "REPLACED|$dest|$backup" >> "$JOURNAL"
+            echo "REPLACED|$dest|$backup" >> "$JOURNAL_FILE"
 
         done
         sync
