--- a/FirmwarePackager/templates/scripts/recover_boot.sh.in
+++ b/FirmwarePackager/templates/scripts/recover_boot.sh.in
@@ -10,9 +10,9 @@ JOURNAL_DIR="/opt/upgrade/journal"
 for st in "$STATE_DIR"/*.state; do
     [ -e "$st" ] || continue
 
-    # Skip packages that have already finished
-    step=$(grep '^STEP=' "$st" | cut -d= -f2)
-    if [ "$step" = "DONE" ] || [ "$step" = "FAILED" ]; then
+    # Skip packages that finished successfully
+    status=$(grep '^STATUS=' "$st" | cut -d= -f2)
+    if [ "$status" = "SUCCESS" ]; then
         continue
     fi
 
